src/assets/css/styles.css
@import url('https://fonts.googleapis.com/css?family=Titillium+Web');

html,
body {
    height: 100%;
}

body {
    /*font-family: Titillium Web, sans-serif !important;*/
    background-color: #f8f9fa;
}



/*********************
 *** SIDEBAR START ***
 *********************/

.vs-sidebar.vs-sidebar-parent {
  position: fixed;
  padding-top: 56px;
}

/* Overflow START */
/* width */
.vs-sidebar--items::-webkit-scrollbar {
  width: 5px;
}

/* Track */
.vs-sidebar--items::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
.vs-sidebar--items::-webkit-scrollbar-thumb {
  /*background: #888;*/
  background: #bfc0bf;
}

/* Handle on hover */
.vs-sidebar--items::-webkit-scrollbar-thumb:hover {
  background: darkgrey;
}

/* Handle on active */
.vs-sidebar--items::-webkit-scrollbar-thumb:active {
  background: #747374;
}
/* Overflow END */

/* Sidebar icon style */
.vs-sidebar--item > a > i {
  margin-right: 8px;
  font-size: 1rem;
}

/* Override sidebar static router link */
#sidebar-navigation-links .vs-sidebar--item > a {
  color: unset !important;
  opacity: unset !important;
}

#sidebar-navigation-links .vs-sidebar-item-active {
  font-weight: unset !important;
  background: unset !important;
  border-right: unset !important;
}

/* Override sidebar static active router link */
#sidebar-navigation-links a.router-link-exact-active {
  /* Styles from .vs-sidebar-item-active class */
  font-weight: 700;
  background: -webkit-gradient(linear,left top, right top,from(transparent),to(rgba(0,0,0,.01)));
  background: linear-gradient(90deg,transparent,rgba(0,0,0,.01));
  border-right: 3px solid rgba(var(--vs-primary),1)!important;

  /* Styles from .vs-sidebar-item-active a tag */
  color: rgba(var(--vs-primary),1)!important;
  opacity: 1!important;
}

/* Overriding sidebar-group ul tag's margin bottom */
.vs-sidebar--group-items {
  margin-bottom: 0;
}

/*********************
 ***  SIDEBAR END  ***
 *********************/


/**************************
 *** RELATED DATA START ***
 **************************/

.related-table {
  font-size: 0.9rem !important;
}
.related-table td, .related-table th {
  padding: 0.25rem 0.4rem !important;
}

.related-table th.date-th {
  min-width: 100px!important;
}

.related-table th.btn-th {
  min-width: 5.7em!important;
  width: 5.7em!important;
}

.related-input-data td{
  padding: 0.2em!important;
}

.related-input-data .mx-datepicker{
  font-size: 0.9rem !important;
  font-weight: lighter;
}

.related-input-data .mx-calendar-icon {
  height: auto!important;
}

.related-input-data .mx-calendar .mx-calendar-panel-date {
  z-index: 1000000!important;
}

.allow-remove {
  background-color: rgba(220, 53, 69, 0.2) !important;
}

.edit-mode {
  background-color: rgba(40, 167, 69, 0.2) !important;
}

/**************************
 ***  RELATED DATA END  ***
 **************************/



.custom > .multislelect__input {
  height: calc(1.5em + 0.5rem + 2px);
  padding: 0.25rem 0.5rem;
  font-size: 0.875rem;
  line-height: 1.5;
  border-radius: 0.2rem;
}

/* Full-screen loading overlay */
.loading-overlay {
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 1040;
    background: rgba(255, 255, 255, 0.5);
    width: 100%;
    padding: 200% 0;
}

.loading-overlay-search {
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 1040;
}

/* Cancel request button style */
.abort-request-overlay {
    position: fixed;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1050;
    text-align: center;
    bottom: 15%;
    padding: 10px 15px;
}



/***************************************
 *** MULTISELECT CUSTOM STYLES START ***
 ***************************************/

.invalid > .multiselect__tags {
    border-color: #dc3545;
}

/*noinspection CssInvalidPseudoSelector*/
.invalid > .multiselect__tags:focus-within {
    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
}

.valid > .multiselect__tags {
    border-color: #28a745;
}

/*noinspection CssInvalidPseudoSelector*/
.valid > .multiselect__tags:focus-within {
    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
}

/*
 * Adds higher z-index to multiselect so no nearby elements can't override it
 * https://github.com/shentao/vue-multiselect/issues/662
 */
.multiselect--active {
    z-index: 10;
}

/* Giving this class to multiselects so they wouldn't get stuck behind some items i.e., maps */
.high-z-index {
  z-index: 5000;
}

/***************************************
 ***  MULTISELECT CUSTOM STYLES END  ***
 ***************************************/



/*******************************
 *** DATE CLEAR BUTTON START ***
 *******************************/

/* Not needed anymore, because vuejs-datepicker library was updated */
/*.date-clear-button {*/
/*position: absolute;*/
/*z-index: 5;*/
/*padding: 11px 15px;*/
/*right: 0;*/
/*}*/

.date-clear-button:hover {
    opacity: 0.7;
}

/*******************************
 ***  DATE CLEAR BUTTON END  ***
 *******************************/



/********************************
 *** EDIT IMAGE PREVIEW START ***
 ********************************/

.image-preview {
    max-height: 500px;
    max-width: 100%;
    padding: 0.25rem;
    background-color: #fff;
    border: 1px solid #dee2e6;
    border-radius: 0.25rem;
}

@media (max-width: 767px) {
    .image-preview {
        max-height: 500px;
        max-width: 100%;
    }

}

/********************************
 ***  EDIT IMAGE PREVIEW END  ***
 ********************************/


/* DATEPICKER STYLES */
.mx-datepicker {
  width: 100% !important;
}

/* Giving it 1 higher that map's zoom icons have */
.mx-datepicker-popup {
  z-index: 1001 !important;
}


/* CUSTOM STYLES */
  .table {
      background-color: #fff;
  }
  .table td {
	font-size: 0.9rem;
	padding: 0.25rem 0.4rem;
  }
 .table th {
		font-size: 0.9rem;
		padding: 0.5rem 0.4rem;
	  }
label {
	font-size: 0.9rem;
	padding: 0.20rem 0.4rem;
	color: #666;
}

.page-title {
	margin-bottom: 0.5rem;
	border-bottom: solid 1px #999;
}

/*
.bg-light {

	background-color: #666 !important;
	color: #fff !important;
}
*/


.fade-leave-active {
  transition: opacity .2s;
}
.fade-enter-active {
  transition: opacity .7s;
}
.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
  opacity: 0.1;
}

legend {
  font-size: large;
}

/* legend is used in headings where data is divided into blocks */
legend:hover {
  color: #007bff;
  cursor:pointer;
}

.modal {
  top:5% !important;
}

/*********************************
 *** PAGINATE AND EXPORT START ***
 *********************************/

@media (max-width: 767px) {
  .top-select-center {
    margin: 0 auto;
    width: unset;
  }

  .export-center {
    text-align: center;
    width: 100%;
  }

  .bottom-select-center {
    margin: 0 auto;
  }

  /* Overrides bootstrap rule */
  .pagination-center > .justify-content-end {
    justify-content: center !important;
    width: 100%;
  }
}

@media (max-width: 1199px) {
  .top-select-center-xl {
    margin: 0 auto;
    width: unset;
  }

  .export-center-xl {
    text-align: center;
    width: 100%;
  }

  .bottom-select-center-xl {
    margin: 0 auto;
  }

  /* Overrides bootstrap rule */
  .pagination-center-xl > .justify-content-end {
    justify-content: center !important;
    width: 100%;
  }
}

/*********************************
 ***  PAGINATE AND EXPORT END  ***
 *********************************/

@media (max-width: 992px) {
  .modal-dialog-scrollable .modal-content {
    min-width: calc(110vh ) !important;
  }
}
@media (max-width: 623px) {
  .modal-dialog-scrollable .modal-content {
    min-width: 100% !important;
  }
}

/* Related data nav-link active style */
/*.nav-tabs > .nav-item > .nav-link.active {*/
/*  background-color: #007bff;*/
/*  color: #ffffff;*/
/*}*/



/********************
 *** EDITOR START ***
 ********************/

.ck.ck-content ul,
.ck.ck-content ul li {
  list-style-type: inherit;
}

.ck.ck-content ul li ul,
.ck.ck-content ul li ul li {
  list-style-type: circle;
}

.ck.ck-content ul li ul li ul,
.ck.ck-content ul li ul li ul li {
  list-style-type: square;
}

.ck.ck-content ol,
.ck.ck-content ol li {
  list-style-type: decimal;
}

.ck.ck-content ul,
.ck.ck-content ol {
  padding-left: 40px;
}

/********************
 ***  EDITOR END  ***
 ********************/

